Add securityDefinitions to Swagger docs
