# docs/swagger.yaml
@@ -331,4 +331,10 @@ paths:
       summary: Get a JWT token
       tags:
       - Auth
+securityDefinitions:
+  ApiKeyAuth:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
